# SlicerSimpleWorkflows

./: CMakeLists.txt  README.md
QuickSegment/: QuickSegment.py  QuickSegment.py.bak
QuickSegment/Resources/UI/: QuickSegment.ui
